--- a/newsletter.html
+++ b/newsletter.html
@@ -8,10 +8,11 @@
         <script src="js/react-dom.js"></script>
     </head>
     <body>
-        <div id="logo">
-            <h1>Books Aren't Dead!</h1>
-        </div>
-
+        <div id="logo"> </div>
+        <script type = "text/javascript">
+            /* React code */
+            let h1 = React.createElement('h1',null, "Books Aren't Dead!");
+        </script>
         <nav>
             <a href="index.html">Home</a>
             <a href="new-releases.html">New Releases</a>
