Check if user exists
When loging in if user exist success message is displayed otherwise fail message

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <h1>Books Aren't Dead!</h1>
         <form id="login" action="login.php" method="post">
-            <label>username: </label>
-            <input type="text" name="username"><br>
-            <label>password: </label>
-            <input type="password" name="password"><br>
+            <label for="userName">username: </label>
+            <input type="text" is="userName" name="userName"><br>
+            <label for="user_Password">password: </label>
+            <input type="password" id="user_Password" name="user_Password"><br>
             <br>
             <input type="submit" value="Login">
             <button type="button" id="sign-up">Sign-up</button> 
