--- a/sign-up.html
+++ b/sign-up.html
@@ -3,10 +3,25 @@
     <head>
         <title>Books Aren't Dead.com</title>
         <meta charset="utf-8">
-        <link rel = "stylesheet" href="Style/main.css">
         <script src="js/react.js"></script>
         <script src="js/react-dom.js"></script>
+        <script src="js/navbar.js"></script>
+        <link rel="stylesheet" type="text/css" href="./Style/main.css" />
+        <link rel="stylesheet" type="text/css" href="./Style/nav-bar.css" />
     </head>
+    <header>
+        <h1>Books Aren't Dead!</h1>
+        <form id="login" action="login.php" method="post">
+            <label for="userName">username: </label>
+            <input type="text" is="userName" name="userName"><br>
+            <label for="user_Password">password: </label>
+            <input type="password" id="user_Password" name="user_Password"><br>
+            <br>
+            <input type="submit" value="Login">
+            <button type="button" id="sign-up">Sign-up</button> 
+        </form>
+        
+    </header>
     <body>
         <div id="logo"></div>
         <script type = "text/javascript">
@@ -14,11 +29,13 @@
             let h1 = React.createElement('h1',null, "Books Aren't Dead!");
         </script>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="new-releases.html">New Releases</a>
-            <a href="newsletter.html">Newsletter</a>
-            <a href="best-sellers.html">Best Sellers</a>
-        </nav>    
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="new-releases.html">New Releases</a></li>
+                <li><a href="newsletter.html">Newsletter</a></li>
+                <li><a href="best-sellers.html">Best Sellers</a></li>
+            </ul>
+         </nav>    
         
         <form action="addUser.php" method="post">
             <label for="userId">userId: </label>
@@ -26,7 +43,7 @@
             <label for="userName">username: </label>
             <input type="text" is="userName" name="userName"><br>
             <label for="user_Password">password: </label>
-            <input type="text" id="user_Password" name="user_Password"><br>
+            <input type="password" id="user_Password" name="user_Password"><br>
             <label for="user_Address">address: </label>
             <input type="text" id="user_Address" name="user_Address"><br>
             <label for="user_zipcode">zipcode: </label>
