--- a/new-releases.html
+++ b/new-releases.html
@@ -18,6 +18,7 @@
             <a href="new-releases.html">New Releases</a>
             <a href="newsletter.html">Newsletter</a>
             <a href="best-sellers.html">Best Sellers</a>
+            <a href="recommend.html">Recommendations</a>
         </nav>    
         
         <form action="processes.php" method="post">
