--- a/recommend.html
+++ b/recommend.html
@@ -21,11 +21,11 @@
         </form> <br>
     </body>
     <header>
-        <h2>Stay up to speed on events, deals, and new releases!</h2>
+        <h2>Not sure what book to choose? Look at what others recommend, or submit a recommendation yourself!</h2>
         <form id="events" action="events.php" method="post">
-            <label for="News">Updates: </label>
+            <label for="Recommendation">Recommendation: </label>
             <input type="text" is="" fill="fill">
-            <button type="button" id="Submit Post">submit</button> <br>
+            <button type="button" id="Submit Post">Submit Your Thoughts</button> <br>
             <label for="Date">Date of post: </label> <br>
         </form>
        </header>
