--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
     </header>
     <body>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="new-releases.html">New Releases</a></li>
-                <li><a href="newsletter.html">Newsletter</a></li>
-                <li><a href="best-sellers.html">Best Sellers</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="new-releases.html">New Releases</a>
+            <a href="newsletter.html">Newsletter</a>
+            <a href="best-sellers.html">Best Sellers</a>
+            <a href="recommend.html">Recommendations</a>
          </nav>  
 
         <div id="logo"></div>
